[package]
name = "kaolin"
version = "0.1.7"
edition = "2024"
description = "A Rust library for flexible layouts, inspired by Clay"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/toto04/kaolin"
authors = ["Tommaso Morganti <tommaso.morganti@polinetwork.org>"]

[dependencies]
derive-default-constructor = "0.1.0"
derive_setters = "0.1.8"
raylib = { version = "5.5.1", optional = true }
unicode-segmentation = "1.12.0"

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]

[features]
raylib = ["dep:raylib"]
