[package]
name = "kaolin"
version = "0.1.13"
edition = "2024"
description = "A Rust library for flexible layouts, inspired by Clay"
license-file = "LICENSE"
repository = "https://github.com/toto04/kaolin"
authors = ["Tommaso Morganti <tommaso.morganti@polinetwork.org>"]
keywords = ["layout", "flexbox", "rust", "clay", "ui"]
categories = ["gui", "no-std"]

[dependencies]
derive_setters = "0.1.8"
embedded-graphics = { version = "0.8.1", optional = true }
raylib = { version = "5.5.1", optional = true }
typed_floats = "1.0.6"
u8g2-fonts = { version = "0.5.2", optional = true }
unicode-segmentation = "1.12.0"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[features]
raylib = ["dep:raylib"]
embedded = ["dep:embedded-graphics", "dep:u8g2-fonts"]

[dev-dependencies]
clay-layout = { version = "0.4.0" }
embedded-graphics-simulator = "0.7.0"

[profile.bench]
debug = true

[[example]]
name = "embedded"
required-features = ["embedded"]

[[example]]
name = "raylib"
required-features = ["raylib"]
